--- a/index.html
+++ b/index.html
@@ -10,5 +10,39 @@
       crossorigin="anonymous" />
     <title>ISFIB</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container-fluid bg-info">
+      <div class="container p-5">
+        <form>
+          <div class="mb-3">
+            <label for="nome_completo" class="form-label">Nome Completo:</label>
+            <input
+              type="text"
+              id="nome_completo"
+              class="form-control"
+              placeholder="Nome Completo" />
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Endereço de e-mail:</label>
+            <input
+              type="text"
+              id="email"
+              class="form-control"
+              placeholder="exemplo@provedor.com.br" />
+          </div>
+          <div class="mb-3">
+            <label for="telefone" class="form-label"
+              >Número de telefone (WhatsApp):</label
+            >
+            <input
+              type="tel"
+              id="telefone"
+              class="form-control"
+              placeholder="(99)99999-9999" />
+          </div>
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
