--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous" />
+			<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>ISFIB</title>
   </head>
   <body>
     <div class="container-fluid bg-info">
-      <div class="container p-5">
-        <form>
+      <div class="container p-5" >
+        <form name="google-form">
+					<div id="form_alerts"></div>
           <div class="mb-3">
             <label for="nome_completo" class="form-label">Nome Completo:</label>
             <input
               type="text"
               id="nome_completo"
               class="form-control"
-              placeholder="Nome Completo" />
+              placeholder="Nome Completo"
+              name="nome" 
+							required/>
           </div>
           <div class="mb-3">
             <label for="email" class="form-label">Endereço de e-mail:</label>
@@ -28,7 +32,9 @@
               type="text"
               id="email"
               class="form-control"
-              placeholder="exemplo@provedor.com.br" />
+              placeholder="exemplo@provedor.com.br"
+              name="email" 
+							required/>
           </div>
           <div class="mb-3">
             <label for="telefone" class="form-label"
@@ -38,11 +44,15 @@
               type="tel"
               id="telefone"
               class="form-control"
-              placeholder="(99)99999-9999" />
+              placeholder="(99)99999-9999"
+              name="telefone" 
+							required/>
           </div>
           <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
       </div>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
