--- a/index.html
+++ b/index.html
@@ -1,36 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ISFB - Processo Seletivo</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-
-	<link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-	<div class="container-fluid styleContainer d-flex justify-content-center align-items-center">
-		<div class="w-75 h-75 bg-black styleInnerContainer d-flex flex-row flex-wrap">
-			<header class="bg-primary w-100 h-25">
-
-			</header>
-			<main class="bg-warning w-100 h-50">
-
-			</main>
-			<footer class="bg-danger w-100 h-25 d-flex flex-row flex-wrap">
-				<section class="bg-dark w-100 h-50"></section>
-				<section class="bg-danger w-100 h-50"></section>
-			</footer>
-		</div>
-	</div>
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-		crossorigin="anonymous" defer></script>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>ISFIB - Processo Seletivo</title>
+  </head>
+  <body></body>
 </html>
