Base Structure of the Project

--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <link rel="stylesheet" href="style.css" />
     <title>ISFIB - Processo Seletivo</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <header></header>
+      <main></main>
+      <footer></footer>
+    </div>
+  </body>
 </html>
