--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>ISFIB - Processo Seletivo</title>
   </head>
   <body>
-    <div>
-      <header></header>
+    <div class="container">
+      <header>
+        <div class="header_title"><h1>Processo de Seleção</h1></div>
+        <div><img src="img/logotipo.png" alt="Logotipo ISFIB" /></div>
+      </header>
       <main></main>
       <footer></footer>
     </div>
