--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="container">
       <header>
         <div class="header_title"><h1>Processo de Seleção</h1></div>
-        <div><img src="img/logotipo.png" alt="Logotipo ISFIB" /></div>
+        <div class="header_img">
+          <img src="img/logotipo.png" alt="Logotipo ISFIB" />
+        </div>
       </header>
       <main></main>
       <footer></footer>
