--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
   <body>
     <div class="container">
       <header>
-        <div class="header_title"><h1>Processo de Seleção</h1></div>
-        <div class="header_img">
+        <div class="header_box_title"><h1>Processo de Seleção</h1></div>
+        <div class="header_box_img">
           <img src="img/logotipo.png" alt="Logotipo ISFIB" />
         </div>
       </header>
       <main></main>
-      <footer></footer>
+      <footer>
+        <div class="footer_box_btn">
+          <div class="footer_box_btn_title_edital">
+            <h3>Confira o Edital!</h3>
+          </div>
+          <div class="footer_box_btn_img"><img src="" alt="" />a</div>
+        </div>
+        <div class="footer_box_btn_action"><a href="">Inscreva-se!</a></div>
+      </footer>
     </div>
   </body>
 </html>
