--- a/index.html
+++ b/index.html
@@ -3,27 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
     <title>ISFIB - Processo Seletivo</title>
   </head>
-  <body>
-    <div class="container">
-      <header>
-        <div class="header_box_title"><h1>Processo de Seleção</h1></div>
-        <div class="header_box_img">
-          <img src="img/logotipo.png" alt="Logotipo ISFIB" />
-        </div>
-      </header>
-      <main></main>
-      <footer>
-        <div class="footer_box_btn">
-          <div class="footer_box_btn_title_edital">
-            <h3>Confira o Edital!</h3>
-          </div>
-          <div class="footer_box_btn_img"><img src="" alt="" />a</div>
-        </div>
-        <div class="footer_box_btn_action"><a href="">Inscreva-se!</a></div>
-      </footer>
-    </div>
-  </body>
+<body class="container-fluid" >
+	<div class="conteiner m-3 rounded style_container">
+		<header class="row justify-content-center pt-4">
+			<div class="col-5 rounded-start-pill style_header_text"><h1 class="my-2 px-3 h6 lh-1 text-end">Processo de Seleção</h1></div>
+			<div class="col-4 rounded-end-pill style_header_img">
+				<img class="logotipo" src="img/logotipo.png" alt="Logotipo ISFIB" />
+			</div>
+		</header>
+	</div>
+	
+</body>
+  
 </html>
