Adicionado os elementos do main

--- a/index.html
+++ b/index.html
@@ -11,16 +11,32 @@
     <link rel="stylesheet" href="style.css" />
     <title>ISFIB - Processo Seletivo</title>
   </head>
-<body class="container-fluid" >
-	<div class="conteiner m-3 rounded style_container">
-		<header class="row justify-content-center pt-4">
-			<div class="col-5 rounded-start-pill style_header_text"><h1 class="my-2 px-3 h6 lh-1 text-end">Processo de Seleção</h1></div>
-			<div class="col-4 rounded-end-pill style_header_img">
-				<img class="logotipo" src="img/logotipo.png" alt="Logotipo ISFIB" />
-			</div>
-		</header>
-	</div>
-	
-</body>
-  
+  <body class="container-fluid">
+    <div class="conteiner m-3 rounded style_container">
+      <header class="row justify-content-center pt-4 pb-3">
+        <div class="col-5 rounded-start-pill style_header_text">
+          <h1 class="my-2 px-3 h6 lh-1 text-end">Processo de Seleção</h1>
+        </div>
+        <div class="col-4 rounded-end-pill style_header_img">
+          <img class="logotipo" src="img/logotipo.png" alt="Logotipo ISFIB" />
+        </div>
+      </header>
+      <main class="text-center pt-5">
+        <section>
+          <h2 class="fw-bold fs-1 main_text_title">Inscrições</h2>
+          <h2 class="main_text_title fw-bold fs-1">Abertas</h2>
+          <p class="main_text_description">de 17 à 30 de novembro.</p>
+        </section>
+        <section class="mt-5">
+          <p class="main_text_description">Para qualquer estudante</p>
+          <h2 class="main_text_title fw-bold fs-1">Universitário</h2>
+          <img src="img/arrowDown.png" alt="Seta Apontando Para Baixo" />
+        </section>
+        <img
+          src="img/student.png"
+          alt="Estudantes Universitários Reunidos"
+          class="w-100" />
+      </main>
+    </div>
+  </body>
 </html>
