Adicionado elementos do footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>ISFIB - Processo Seletivo</title>
   </head>
   <body class="container-fluid">
-    <div class="conteiner m-3 rounded style_container">
+    <div class="conteiner m-3 rounded-4 style_container">
       <header class="row justify-content-center pt-4 pb-3">
         <div class="col-5 rounded-start-pill style_header_text">
           <h1 class="my-2 px-3 h6 lh-1 text-end">Processo de Seleção</h1>
@@ -23,13 +23,13 @@
       </header>
       <main class="text-center pt-5">
         <section>
-          <h2 class="fw-bold fs-1 main_text_title">Inscrições</h2>
-          <h2 class="main_text_title fw-bold fs-1">Abertas</h2>
+          <h2 class="fw-bold fs-1 main_text_title m-0">Inscrições</h2>
+          <h2 class="main_text_title fw-bold fs-1 m-0">Abertas</h2>
           <p class="main_text_description">de 17 à 30 de novembro.</p>
         </section>
         <section class="mt-5">
-          <p class="main_text_description">Para qualquer estudante</p>
-          <h2 class="main_text_title fw-bold fs-1">Universitário</h2>
+          <p class="main_text_description m-0">Para qualquer estudante</p>
+          <h2 class="main_text_title fw-bold fs-1 mt-n5">Universitário</h2>
           <img src="img/arrowDown.png" alt="Seta Apontando Para Baixo" />
         </section>
         <img
@@ -37,6 +37,21 @@
           alt="Estudantes Universitários Reunidos"
           class="w-100" />
       </main>
+      <footer>
+        <a href="#" class="text-decoration-none"
+          ><div class="d-flex py-2 footer_btn justify-content-evenly">
+            <h2 class="my-auto">Confira o Edital!</h2>
+            <img
+              src="img/newDocument.png"
+              alt=""
+              class="footer_btn_img my-auto" /></div
+        ></a>
+        <a href="#" class="text-decoration-none"
+          ><div class="py-2 text-center footer_btn_action rounded-bottom-4">
+            <h2 class="my-auto fw-bold h1">Inscreva-se!</h2>
+          </div></a
+        >
+      </footer>
     </div>
   </body>
 </html>
