--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="style.css" />
     <title>ISFIB - Processo Seletivo</title>
   </head>
-  <body class="container-fluid">
+  <body>
     <div class="conteiner m-3 rounded-4 style_container">
       <header class="row justify-content-center pt-4 pb-3">
         <div class="col-5 rounded-start-pill style_header_text">
-          <h1 class="my-2 px-3 h6 lh-1 text-end">Processo de Seleção</h1>
+          <h1 class="m-0 pt-1 h4 text-end teste">Processo de Seleção</h1>
         </div>
-        <div class="col-4 rounded-end-pill style_header_img">
+        <div class="col-4 rounded-end-pill style_header_img text-sm-center">
           <img class="logotipo" src="img/logotipo.png" alt="Logotipo ISFIB" />
         </div>
       </header>
@@ -53,5 +53,9 @@
         >
       </footer>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
   </body>
 </html>
