--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>ISFIB - Processo Seletivo</title>
   </head>
   <body>
-    <div class="rounded-4 style_container h-100">
+    <div class="rounded-4 style_container">
       <header class="w-100  d-flex justify-content-center align-items-center h-25">
 
         <div class="d-flex align-items-center justify-content-center h-50 w-75">
@@ -71,5 +71,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"></script>
+      <script src="script.js" defer></script>
   </body>
 </html>
