--- a/index.html
+++ b/index.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
-    <title>ISFIB - Processo Seletivo</title>
-  </head>
-  <body>
-    <main class="container">
-      <section class="secao1">
-        <div>
-          <h2 class="secao1_titulo">Inscrições</h2>
-          <h2 class="secao1_titulo">Abertas</h2>
-          <p class="secao1_descricao">de 17 à 27 de novembro.</p>
-        </div>
-        <div class="secao1_img">
-          <img src="img/student2.png" alt="" />
-        </div>
-        <div class="secao1_conteiner_descricao">
-          <p class="secao1_descricao">Para qualquer <span> Estudante</span></p>
-        </div>
-        
-        <div class="secao1_btn">
 
-          <a href="#" class="secao1_btn_link secao1_btn_link_elementos"
-            ><p>Confira o Edital!</p>
-            <img src="img/new document_black.png" alt=""
-          /></a>
-          <a href="#" class="secao1_btn_link btn_border">Inscreva-se!</a>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="style.css" />
+  <title>ISFIB - Processo Seletivo</title>
+</head>
 
-      </section>
-      <section class="secao2">
-        <div class="secao2_logotipo">
-          <div class="secao2_titulo_logotipo">
-            <h1>Processo de Seleção</h1>
-          </div>
-          <div class="secao2_logotipo_img">
-            <img src="img/logotipo.png" alt="" />
-          </div>
+<body>
+  <main class="container">
+
+    <section class="secao2">
+      <div class="secao2_logotipo">
+        <div class="secao2_titulo_logotipo">
+          <h1>Processo de Seleção</h1>
         </div>
-        <!-- <div class="secao2_img"><img src="img/student.png" alt="" /></div> -->
-      </section>
-    </main>
-  </body>
+        <div class="secao2_logotipo_img">
+          <img src="img/logotipo.png" alt="" />
+        </div>
+      </div>
+      <!-- <div class="secao2_img"><img src="img/student.png" alt="" /></div> -->
+    </section>
+
+    <section class="secao1">
+      <div class="first_title">
+        <h2 class="secao1_titulo">Inscrições</h2>
+        <h2 class="secao1_titulo">Abertas</h2>
+        <p class="secao1_descricao">de 17 à 27 de novembro.</p>
+      </div>
+      <div class="secao1_img">
+        <img src="img/student2.png" alt="" />
+      </div>
+      <div class="secao1_conteiner_descricao">
+        <p class="secao1_descricao">Para qualquer <span> Estudante</span></p>
+      </div>
+
+
+    </section>
+    <section class="secao3">
+
+      <div class="secao1_btn">
+
+        <a href="#" class="secao1_btn_link secao1_btn_link_elementos">
+          <p>Confira o Edital!</p>
+          <img src="img/new document_black.png" alt="" />
+        </a>
+        <a href="#" class="secao1_btn_link btn_border">Inscreva-se!</a>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
