--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
       </div>
     </section>
   </main>
+  <script>
+    document.addEventListener('DOMContentLoaded', (e) => {
+      document.querySelector('.container').dataset.container= "show"
+    })
+  </script>
 </body>
 
 </html>
