--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 
       <section data-desktop="brasilMap">
         <div>
-          <p>
-            <span>Estudantes</span>
-            de todas as áreas
-            e níveis
+          <p><span>Estudantes</span>
+
+de todas as áreas
+e níveis
           </p>
         </div>
         <img src="img/student2.png" alt="" />
