Conteúdo estruturado no html

--- a/saiba_mais.html
+++ b/saiba_mais.html
@@ -7,6 +7,95 @@
     <link rel="stylesheet" href="saiba_mais.css" />
     <title>ISFIB - Processo Seletivo</title>
   </head>
-
-  <body></body>
+  <body>
+    <div class="container">
+      <p>Prezado candidato,</p>
+      <p>
+        Agradecemos por seu interesse em se juntar à nossa missão de impacto.
+        Como voluntário, você terá a oportunidade de contribuir para o
+        crescimento da internacionalidade no Brasil e fazer a diferença. Antes
+        de se inscrever, por favor, leia atentamente as seguintes instruções:
+      </p>
+      <p>
+        Período de Inscrição: As inscrições ficarão abertas a partir das 18h do
+        dia 17 de novembro de 2023 até às 23:59 do dia 27 de novembro de 2023.
+      </p>
+      <h2>Formulário de Inscrição:</h2>
+      <p>Esse formulário de inscrição está dividido nas seguintes seções:</p>
+      <ol>
+        <li>Informações Pessoais: Preencha com seus dados pessoais.</li>
+        <li>Informações Educacionais: Forneça detalhes sobre sua formação.</li>
+        <li>Motivação: Conte-nos por que deseja ser voluntário na ISFIB.</li>
+        <li>
+          Experiências Anteriores: Compartilhe suas experiências relevantes.
+        </li>
+        <li>
+          Escolha dos Setores: Selecione o(s) setore(s) em que deseja trabalhar.
+        </li>
+        <li>
+          Informações Extras: Inclua informações adicionais, se necessário.
+        </li>
+        <li>Confirmação: Revise suas respostas antes de enviar.</li>
+      </ol>
+      <h2>Vagas:</h2>
+      <p>As vagas disponíveis estão distribuídas nos seguintes setores:</p>
+      <p>
+        Captação de Recursos - O departamento de Captação de Recursos desempenha
+        um papel crucial na sustentação e crescimento contínuo de nossas
+        iniciativas. Encarregados de identificar, angariar e cultivar apoio
+        financeiro, nossa equipe de captação de recursos é fundamental para
+        garantir os recursos necessários para impulsionar nossos projetos. Sua
+        dedicação visa criar parcerias duradouras e promover o engajamento da
+        comunidade em nossa missão.
+      </p>
+      <p>
+        Educação - A equipe de Educação é o alicerce do conhecimento em nossa
+        organização. Com a responsabilidade de desenvolver programas
+        educacionais inovadores, eles capacitam nossos colaboradores,
+        voluntários e a comunidade em geral. Além de promover o aprendizado
+        contínuo, essa equipe desempenha um papel fundamental na disseminação de
+        informações valiosas, contribuindo para o crescimento intelectual e o
+        desenvolvimento de habilidades essenciais em nossa comunidade.
+      </p>
+      <p>
+        Recursos Humanos - O setor de Recursos Humanos (RH) desempenha um papel
+        essencial na gestão e desenvolvimento da nossa equipe de voluntários.
+        Nossa equipe de RH é responsável por recrutar, integrar, treinar e
+        apoiar os voluntários ao longo de sua jornada conosco. Além disso, são
+        responsáveis por criar um ambiente de trabalho mais inclusivo e
+        colaborativo.
+      </p>
+      <p>
+        Relações Públicas e Comunicação - O time de Relações Públicas e
+        Comunicação é a voz essencial que conecta nossa organização com o mundo.
+        Responsáveis por construir uma narrativa envolvente e transparente, eles
+        cultivam a imagem pública da nossa missão. Gerenciam estratégias de
+        comunicação, estabelecem parcerias mediáticas e promovem o envolvimento
+        da comunidade, garantindo que nossa mensagem alcance e inspire um
+        público mais amplo.
+      </p>
+      <h2>Entrevistas:</h2>
+      <p>
+        Entre os dias 4 de dezembro e 9 de dezembro de 2023, realizaremos as
+        entrevistas dos candidatos com nosso time de Recursos Humanos e os
+        líderes dos setores escolhidos pelo candidato.
+      </p>
+      <h2>Resultados:</h2>
+      <p>
+        A previsão para o anúncio dos resultados finais é 16 de dezembro de
+        2023. Os candidatos selecionados serão notificados via e-mail.
+      </p>
+      <h2>Dúvidas:</h2>
+      <p>
+        Qualquer dúvida sobre o processo seletivo pode ser enviada para o e-mail
+        rh@isfib.org
+      </p>
+      <p>
+        Seja parte da mudança e contribua para fortalecer a internacionalidade
+        no Brasil. Estamos ansiosos para receber sua inscrição e trabalhar
+        juntos em prol de um mundo mais conectado e inclusivo!
+      </p>
+      <p>Toda a equipe do ISFIB lhe deseja uma boa sorte!git</p>
+    </div>
+  </body>
 </html>
