--- a/index.html
+++ b/index.html
@@ -93,13 +93,15 @@ de todas as áreas
 e níveis
           </p>
         </div>
-        <img src="img/student2.png" alt="" />
+        <div>
+          <img src="img/student2.png" alt="" />
+        </div>
       </section>
 
     </div>
   </main>
 
-  <script defer>
+  <script>
     document.addEventListener('DOMContentLoaded', (e) => {
       function anima() {
         const buttonAsign = document.querySelector('.jsanimate')
