inserindo links e corrigindo texto

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
       <div class="secao1_btn">
 
-        <a href="#" class="secao1_btn_link secao1_btn_link_elementos">
-          <p>Confira o Edital!</p>
+        <a href="/saiba-mais.html" class="secao1_btn_link secao1_btn_link_elementos">
+          <p>Saiba mais</p>
           <img src="img/new document_black.png" alt="" />
         </a>
-        <a href="https://globo.com" class="secao1_btn_link btn_border jsanimate">Inscreva-se!</a>
+        <a href="https://forms.gle/7DTXApc9s7tF6EBUA" class="secao1_btn_link btn_border jsanimate">Inscreva-se!</a>
       </div>
     </section>
   </main>
@@ -76,11 +76,11 @@
         </div>
 
         <div data-desktop = "botoes">
-          <a href="#">
-            <p>Confira o Edital!</p>
+          <a href="/saiba-mais.html">
+            <p>Saiba mais!</p>
             <img src="img/new document_black.png" alt="" />
           </a>
-          <a href="#">Inscreva-se!</a>
+          <a href="https://forms.gle/7DTXApc9s7tF6EBUA">Inscreva-se!</a>
         </div>
 
       </section>
