--- a/saiba-mais.html
+++ b/saiba-mais.html
@@ -118,5 +118,12 @@
         </div>
       </section>
     </div>
+    <script>
+      document.addEventListener('DOMContentLoaded', ()=>{
+        document
+        .querySelector('.container')
+        .dataset.container = "show"
+      })
+    </script>
   </body>
 </html>
