--- a/index.html
+++ b/index.html
@@ -145,6 +145,15 @@ e níveis
 
     })
   </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GD7CYQ1TWV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GD7CYQ1TWV');
+  </script>
 </body>
 
 </html>
